# Argus

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT_GUIDE.md  DISTRIBUTION.md  DOCKER_SETUP.md  Dockerfile  Dockerfile.full  Dockerfile.source  PUBLISHING.md  PUBLISHING_GUIDE.md  PUBLISHING_PROGRESS.md  README.md  RELEASE_STATUS.md  cargo.toml  docker-compose.yml  homebrew-setup-commands.md
.github/workflows/: ci.yml  docs.yml  publish.yml
chocolatey/: README.md
chocolatey/argus/: argus.nuspec
chocolatey/argus/tools/: chocolateyinstall.ps1  chocolateyuninstall.ps1
configs/: local.toml
crates/argus-cli/: Cargo.toml
crates/argus-cli/src/: main.rs
crates/argus-common/: Cargo.toml
crates/argus-common/src/: lib.rs  types.rs  url.rs
crates/argus-config/: Cargo.toml
crates/argus-config/src/: cli.rs
crates/argus-dedupe/: Cargo.toml
crates/argus-dedupe/src/: bloom.rs  hybrid.rs  lib.rs  redis.rs  seen.rs  set_trait.rs  simhash.rs
crates/argus-fetcher/: Cargo.toml
crates/argus-fetcher/src/: content.rs  error.rs  http.rs  js_render.rs  lib.rs  retry.rs
crates/argus-frontier/: Cargo.toml
crates/argus-frontier/src/: frontier.rs  in_memory.rs  lib.rs  redis.rs  stream.rs
crates/argus-parser/: Cargo.toml
crates/argus-parser/src/: html.rs  lib.rs  sitemap.rs
crates/argus-robots/: Cargo.toml
crates/argus-robots/src/: cache.rs  lib.rs  parser.rs
crates/argus-storage/: Cargo.toml
crates/argus-storage/src/: file.rs  lib.rs  s3.rs  storage_trait.rs
crates/argus-worker/: Cargo.toml
crates/argus-worker/src/: lib.rs  rate_limit.rs  shutdown.rs  worker.rs
doc/: index.html
docker/: README.md
docs/: DEPLOYMENT.md  SCALABILITY.md  SCALING_GUIDE.md  USAGE.md  architecture.md  crates.js  help.html  settings.html  src-files.js
docs/argus/: all.html  fn.main.html  fn.run_crawl.html  fn.run_seed.html  index.html  sidebar-items.js
docs/argus_common/: all.html  index.html  sidebar-items.js
docs/argus_common/types/: index.html  sidebar-items.js  struct.CrawlJob.html  struct.ExtractedLink.html  struct.FetchResult.html
docs/argus_common/url/: fn.normalize_url.html  index.html  sidebar-items.js
docs/argus_config/: all.html  index.html
docs/argus_config/cli/: enum.Command.html  index.html  sidebar-items.js  struct.Cli.html  struct.CrawlOpts.html  struct.SeedOpts.html
docs/argus_dedupe/: all.html  index.html  sidebar-items.js
docs/argus_dedupe/bloom/: index.html  sidebar-items.js  struct.BloomDeduplicator.html
docs/argus_dedupe/hybrid/: index.html  sidebar-items.js  struct.HybridSeenSet.html  struct.HybridStats.html
docs/argus_dedupe/redis/: constant.DEFAULT_SEEN_KEY.html  index.html  sidebar-items.js  struct.RedisSeenSet.html
docs/argus_dedupe/seen/: index.html  sidebar-items.js  struct.SeenUrlSet.html
docs/argus_dedupe/set_trait/: index.html  sidebar-items.js  trait.SeenSet.html
docs/argus_dedupe/simhash/: constant.SIMHASH_BITS.html  fn.hash_token.html  fn.tokenize.html  index.html  sidebar-items.js  struct.Simhash.html
docs/argus_fetcher/: all.html  index.html  sidebar-items.js
docs/argus_fetcher/content/: enum.ContentType.html  fn.detect_encoding.html  fn.extract_text_content.html  index.html  sidebar-items.js  struct.ContentLimits.html
docs/argus_fetcher/error/: enum.FetchErrorKind.html  index.html  sidebar-items.js  struct.FetchError.html
docs/argus_fetcher/http/: index.html  sidebar-items.js  struct.FetcherConfig.html  struct.HttpFetcher.html
docs/argus_fetcher/js_render/: index.html  sidebar-items.js  struct.JsRenderer.html
docs/argus_fetcher/retry/: index.html  sidebar-items.js  struct.RetryConfig.html  struct.RetryState.html
docs/argus_frontier/: all.html  index.html  sidebar-items.js
docs/argus_frontier/frontier/: index.html  sidebar-items.js  trait.Frontier.html
docs/argus_frontier/in_memory/: index.html  sidebar-items.js  struct.InMemoryFrontier.html
docs/argus_frontier/redis/: constant.DEFAULT_QUEUE_KEY.html  index.html  sidebar-items.js  struct.RedisFrontier.html
docs/argus_frontier/stream/: index.html  sidebar-items.js  struct.StreamFrontier.html  type.XAutoClaimResult.html
docs/argus_parser/: all.html  index.html  sidebar-items.js
docs/argus_parser/html/: fn.extract_links.html  fn.extract_metadata.html  index.html  sidebar-items.js  struct.PageMetadata.html
docs/argus_parser/sitemap/: enum.SitemapEntry.html  fn.discover_sitemap_urls.html  fn.parse_sitemap.html  index.html  sidebar-items.js  struct.SitemapUrl.html
docs/argus_robots/: all.html  enum.Rule.html  fn.is_allowed.html  index.html  sidebar-items.js  struct.RobotsCache.html  struct.RobotsTxt.html
docs/argus_robots/cache/: index.html  sidebar-items.js  struct.CachedRobots.html  struct.RobotsCache.html
docs/argus_robots/parser/: enum.Rule.html  index.html  sidebar-items.js  struct.RobotsTxt.html
docs/argus_storage/: all.html  fn.init_storage.html  index.html  sidebar-items.js
docs/argus_worker/: all.html  index.html  sidebar-items.js
docs/search.index/: 0136aab38a2e.js  02701d3a5691.js  05e6134f5e68.js  09ab107adaa9.js  0e01d50f32e7.js  0f23ff3e351a.js  148c6d160c23.js  17cd7d47e8c4.js  185dde9a4ff0.js  1a0641bfba40.js  1b17e5cf1185.js  1b954402ffcb.js  1cab69d06cb5.js  205dbca26508.js  24abe141a956.js  2767aa79daef.js  28a0bcfb627c.js  2a5c927f4bac.js  2b85f4ab036a.js  2cdc4abdf48e.js  2cdc92dde82d.js  2d2aa91c9bc9.js  2e00fb040963.js  32cffdcb57bd.js  3a5a46723726.js  3bbaf6d66fde.js  3edacc30deb8.js  43e0dab61f51.js  4cf13a9ccd5d.js  4f5c6ae2e1c8.js  528678cffb56.js  52aa202865c6.js  57755e4e3b34.js  5b005b7b83ab.js  5f2447e5fcfc.js  6488692ed59a.js  64a3f9cbbba2.js  66448a1df7c6.js  665186531c1b.js  66a2ff0f92c5.js  (+8 more)
examples/: README.md  advanced_features.rs  basic_crawl.rs  javascript_rendering.rs  redis_distributed.rs  scalable_crawl.rs
homebrew/: argus.rb
scripts/: continue-publish.sh  publish-chocolatey.ps1  publish-snap.sh  publish.sh  release.sh  run_local.sh  setup-homebrew.sh  update-metadata.sh
snap/: README.md  snapcraft.yaml
snap/local/: local.yaml
(+108 files in other folders)
