[package]
name = "argus-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

argus-config = { path = "../argus-config" }
argus-storage = { path = "../argus-storage" }
argus-worker = { path = "../argus-worker", features = ["redis"] }
