[package]
name = "argus-cli"
version = "0.1.0"
edition = "2021"
authors = ["Argus Contributors"]
description = "A production-ready web crawler capable of handling billions of URLs"
homepage = "https://github.com/yourusername/argus"
repository = "https://github.com/yourusername/argus"
documentation = "https://docs.rs/argus-cli"
readme = "../../README.md"
license = "MIT"
keywords = ["crawler", "web", "scraping", "spider", "async"]
categories = ["web-programming", "command-line-utilities"]

[[bin]]
name = "argus"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

argus-config = { path = "../argus-config" }
argus-storage = { path = "../argus-storage" }
argus-worker = { path = "../argus-worker", features = ["redis"] }
