[package]
name = "argus-config"
version = "0.1.0"
edition = "2021"
authors = ["Argus Contributors"]
description = "Configuration management for the Argus web crawler"
homepage = "https://github.com/dedsecrattle/argus"
repository = "https://github.com/dedsecrattle/argus"
documentation = "https://docs.rs/argus-config"
readme = "../../README.md"
license = "MIT"
keywords = ["crawler", "config", "settings"]
categories = ["config", "web-programming"]

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
argus-common = { version = "0.1.0" }
