[package]
name = "argus-dedupe"
version = "0.1.0"
edition = "2021"

[features]
default = []
redis = ["dep:redis"]

[dependencies]
tokio = { version = "1", features = ["sync", "rt-multi-thread", "macros"] }
anyhow = "1"
async-trait = "0.1"
argus-common = { path = "../argus-common" }
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"], optional = true }
bloomfilter = "1.0"
siphasher = "1.0"
