[package]
name = "argus-dedupe"
version = "0.1.0"
edition = "2021"
authors = ["Argus Contributors"]
description = "Content deduplication utilities for web crawling"
homepage = "https://github.com/dedsecrattle/argus"
repository = "https://github.com/dedsecrattle/argus"
documentation = "https://docs.rs/argus-dedupe"
readme = "../../README.md"
license = "MIT"
keywords = ["crawler", "deduplication", "simhash", "bloom"]
categories = ["web-programming", "algorithms"]

[features]
default = []
redis = ["dep:redis"]

[dependencies]
tokio = { version = "1", features = ["sync", "rt-multi-thread", "macros"] }
anyhow = "1"
async-trait = "0.1"
argus-common = { version = "0.1.0" }
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"], optional = true }
bloomfilter = "1.0"
siphasher = "1.0"
