[package]
name = "argus-fetcher"
version = "0.1.0"
edition = "2021"
authors = ["Argus Contributors"]
description = "HTTP fetching utilities with retry logic for web crawling"
homepage = "https://github.com/dedsecrattle/argus"
repository = "https://github.com/dedsecrattle/argus"
documentation = "https://docs.rs/argus-fetcher"
readme = "../../README.md"
license = "MIT"
keywords = ["crawler", "http", "fetch", "retry"]
categories = ["web-programming", "network-programming"]

[features]
default = []
js-render = ["dep:headless_chrome"]

[dependencies]
anyhow = "1"
bytes = "1"
reqwest = { version = "0.12", features = ["rustls-tls", "gzip", "brotli", "deflate", "http2"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
tracing = "0.1"
headless_chrome = { version = "1.0", optional = true }
argus-common = { version = "0.1.0" }
