[package]
name = "argus-frontier"
version = "0.1.0"
edition = "2021"

[features]
default = []
redis = ["dep:redis", "dep:serde_json"]

[dependencies]
tokio = { version = "1", features = ["sync", "time"] }
anyhow = "1"
async-trait = "0.1"
url = "2"
argus-common = { path = "../argus-common" }
serde_json = { version = "1", optional = true }
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"], optional = true }
