[package]
name = "argus-robots"
version = "0.1.0"
edition = "2021"
authors = ["Argus Contributors"]
description = "Robots.txt parsing and caching for web crawling"
homepage = "https://github.com/dedsecrattle/argus"
repository = "https://github.com/dedsecrattle/argus"
documentation = "https://docs.rs/argus-robots"
readme = "../../README.md"
license = "MIT"
keywords = ["crawler", "robots", "txt", "parsing"]
categories = ["parsing", "web-programming"]

[dependencies]
anyhow = "1"
argus-common = { version = "0.1.0" }
reqwest = { version = "0.12", features = ["rustls-tls"] }
tokio = { version = "1", features = ["sync", "time"] }
url = "2"
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
wiremock = "0.6"
