[package]
name = "argus-storage"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
async-trait = "0.1"
argus-common = { path = "../argus-common" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["fs", "rt", "macros"] }

[dev-dependencies]
bytes = "1"
