[package]
name = "argus-storage"
version = "0.1.0"
edition = "2021"

[features]
default = []
s3 = ["dep:aws-sdk-s3", "dep:aws-config"]

[dependencies]
anyhow = "1"
async-trait = "0.1"
argus-common = { path = "../argus-common" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["fs", "rt", "macros"] }
aws-sdk-s3 = { version = "1", optional = true }
aws-config = { version = "1", optional = true }
bytes = "1"

[dev-dependencies]
bytes = "1"
