[package]
name = "argus-storage"
version = "0.1.0"
edition = "2021"
authors = ["Argus Contributors"]
description = "Storage backends for crawled web data"
homepage = "https://github.com/dedsecrattle/argus"
repository = "https://github.com/dedsecrattle/argus"
documentation = "https://docs.rs/argus-storage"
readme = "../../README.md"
license = "MIT"
keywords = ["crawler", "storage", "s3", "filesystem"]
categories = ["database", "web-programming"]

[features]
default = []
s3 = ["dep:aws-sdk-s3", "dep:aws-config"]

[dependencies]
anyhow = "1"
async-trait = "0.1"
argus-common = { version = "0.1.0" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["fs", "rt", "macros"] }
aws-sdk-s3 = { version = "1", optional = true }
aws-config = { version = "1", optional = true }
bytes = "1"

[dev-dependencies]
bytes = "1"
