[package]
name = "argus-worker"
version = "0.1.0"
edition = "2021"
authors = ["Argus Contributors"]
description = "Worker implementation for distributed web crawling"
homepage = "https://github.com/dedsecrattle/argus"
repository = "https://github.com/dedsecrattle/argus"
documentation = "https://docs.rs/argus-worker"
readme = "../../README.md"
license = "MIT"
keywords = ["crawler", "worker", "distributed", "async"]
categories = ["web-programming", "asynchronous"]

[features]
default = []
redis = ["argus-frontier/redis", "argus-dedupe/redis", "dep:redis"]

[dependencies]
anyhow = "1"
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"], optional = true }

argus-common = { version = "0.1.0" }
argus-frontier = { version = "0.1.0" }
argus-fetcher = { version = "0.1.0" }
argus-parser = { version = "0.1.0" }
argus-robots = { version = "0.1.0" }
argus-dedupe = { version = "0.1.0" }
argus-storage = { version = "0.1.0" }
